created dashboard folder

--- a/quick-lab/src/login.css
+++ b/quick-lab/src/login.css
@@ -9,7 +9,7 @@
     margin-left: 6%;   
     padding: 10px;   
     width: 400px;   
-    color: #ffffff;
+    color: black;
     margin-top: 2.5%;
     margin-bottom: -10%;
     border-style: none;
