--- a/quick-lab/src/dashboard/practicals.css
+++ b/quick-lab/src/dashboard/practicals.css
@@ -1,5 +1,5 @@
 .practical_container{
-    background-color: rgb(246, 255, 255);
+    background-color: #dcf0fc;
     margin-left: 5%;
     width: 100%;
 }
