--- a/quick-lab/src/dashboard/practicals.css
+++ b/quick-lab/src/dashboard/practicals.css
@@ -1,6 +1,6 @@
 .practical_container{
     background-color: #dcf0fc;
-    margin-left: 5%;
+    margin-left: 8%;
     width: 100%;
 }
 .all_practicals{
@@ -9,7 +9,7 @@
 .see_all{
     display: inline;
     /* float: right; */
-    margin-left: 89%;
+    margin-left: 85%;
     color: rgb(10, 152, 187);
 }
 
@@ -17,9 +17,9 @@
     background-color: rgb(241, 250, 252);
     color: rgb(3, 50, 68);
     padding: 3px;
-    width: 190px;
+    width: 145px;
     text-align: center;
-    margin: 2%;
+    margin: 1% 4% 1% 4%;
     border-radius: 10px;
     box-shadow: 1px 1px 10px rgb(153, 151, 151);
     transition: transform 500ms ease;
@@ -29,6 +29,9 @@
     transform: scale(1.1);
 
 }
+.one p{
+    margin: 0;
+}
 .picture{
     width: 100%;
     border-radius: 10px;
@@ -36,5 +39,11 @@
 }
 .about_practical{
     color: rgb(6, 107, 122);
-    margin-left: 2%;
+    margin-left: 4%;
+}
+.practical_title{
+    font-size: 12px;
+}
+.practical_description{
+    font-size: 9px;
 }
