--- a/quick-lab/src/dashboard/practicals.css
+++ b/quick-lab/src/dashboard/practicals.css
@@ -10,15 +10,22 @@
     display: inline;
     /* float: right; */
     margin-left: 85%;
-    color: rgb(10, 152, 187);
+    color:#00A9E5;
+    ;
+}
+
+.arrow{
+    margin-top: -10%;
 }
 
 .one{
     background-color: rgb(241, 250, 252);
     color: rgb(3, 50, 68);
     padding: 3px;
-    width: 145px;
+    width: 150px;
+    /* height:150px ; */
     text-align: center;
+    /* margin-top: 2%; */
     margin: 1% 4% 1% 4%;
     border-radius: 10px;
     box-shadow: 1px 1px 10px rgb(153, 151, 151);
@@ -30,7 +37,7 @@
 
 }
 .one p{
-    margin: 0;
+    /* margin: 0; */
 }
 .picture{
     width: 100%;
@@ -38,11 +45,14 @@
 
 }
 .about_practical{
-    color: rgb(6, 107, 122);
+    margin-top: 4%;
+    color: #5C5C5C;
     margin-left: 4%;
 }
 .practical_title{
     font-size: 12px;
+    margin: 0;
+
 }
 .practical_description{
     font-size: 9px;
