--- a/quick-lab/src/dashboard/dashboard.css
+++ b/quick-lab/src/dashboard/dashboard.css
@@ -102,7 +102,7 @@
 .options{
     display: flex; 
     
-    margin-left:15%;
+    margin-left:9%;
     gap: 5rem;
 
 
@@ -110,9 +110,9 @@
 }
 .options .topics, .level, .subject{
     margin-top: 2%;
-    width:265px ;
+    width:255px ;
     padding: 1px; 
-    margin-left: -4%;
+    /* margin-left: -4%; */
     font-size: 13px;
 
 }
