--- a/quick-lab/src/dashboard/practicals.css
+++ b/quick-lab/src/dashboard/practicals.css
@@ -2,6 +2,7 @@
     background-color: #dcf0fc;
     margin-left: 5%;
     width: 100%;
+    margin-bottom: 2%;
 }
 .all_practicals{
     display: flex;
@@ -25,11 +26,11 @@
     background-color: rgb(241, 250, 252);
     color: rgb(3, 50, 68);
     padding: 3px;
-    width: 150px;
+    width: 164px;
     /* height:150px ; */
     text-align: center;
     /* margin-top: 2%; */
-    margin: 1% 4% 1% 4%;
+    margin: 1% 1% 0% 5.5%;
     border-radius: 10px;
     box-shadow: 1px 1px 10px rgb(153, 151, 151);
     transition: transform 500ms ease;
