--- a/quick-lab/src/labinterface/timer.css
+++ b/quick-lab/src/labinterface/timer.css
@@ -42,13 +42,13 @@
   }
   .limit-value {
     text-align: center;
-    color: #1e293b;
+    /* color: #1e293b; */
     background-image: linear-gradient(to right, #cdd1d6, #00d9f5);
     font-family: 'Roboto';
     font-size: 12px;
     font-weight: 500;
     width: 40px;
-    border-radius: 8px;
+    /* border-radius: 8px; */
     background-color: transparent;
     padding: 8px;
   }
@@ -61,12 +61,12 @@
     margin-left: 300%;
   }
   .elapsed-time {
-    color: #e0531c;
+    color: #1d1b1a;
     font-family: 'Roboto';
     margin-left: 250%;
     font-size: 16px;
     font-weight: bold;
     margin-top: -301%;
     background-color: transparent;
-    margin-left: 490%;
+    margin-left: 500%;
     margin-bottom: -4% }
