setting practicals title to be stored

--- a/quick-lab/src/labinterface/interface.css
+++ b/quick-lab/src/labinterface/interface.css
@@ -3,7 +3,7 @@
     text-align: center;
 }
 .list{
-    background-color:#e8f6fe;
+    /* background-color:#e8f6fe; */
 }
 .appbar{
     background-color:#e8f6fe;
