setting practicals title to be stored

--- a/quick-lab/src/dashboard/practicals.css
+++ b/quick-lab/src/dashboard/practicals.css
@@ -61,3 +61,8 @@
 .practical_description{
     font-size: 9px;
 }
+.footer{
+    /* margin-left:30%;
+    margin-top:5%; */
+    text-align: center;
+}
