--- a/quick-lab/src/dashboard/practicals.css
+++ b/quick-lab/src/dashboard/practicals.css
@@ -2,7 +2,7 @@
     background-color: #dcf0fc;
     margin-left: 5%;
     width: 100%;
-    margin-bottom: 2%;
+    /* margin-bottom: 2%; */
 }
 .all_practicals{
     display: flex;
