fixed ui of signup and homepage

--- a/quick-lab/src/dashboard/practicals.css
+++ b/quick-lab/src/dashboard/practicals.css
@@ -1,5 +1,6 @@
 .practical_container{
     background-color: #dcf0fc;
+    padding:10px;
     /* margin-left: 2%; */
     /* width: 80%; */
     /* margin-bottom: 2%; */
