--- a/quick-lab/src/LabInterface/interface.css
+++ b/quick-lab/src/LabInterface/interface.css
@@ -87,3 +87,14 @@
     font-size:30px;
     margin-left:16%;
 }
+.inst{
+    background-color: rgb(248, 250, 250);
+    padding: 3%;
+    margin-left: 2px;
+    margin-right: 2px;
+    border-radius: 10px;
+}
+.inst:hover{
+    background-color: rgb(231, 246, 247);
+    cursor: grab;
+}
