--- a/quick-lab/src/LabInterface/interface.css
+++ b/quick-lab/src/LabInterface/interface.css
@@ -98,3 +98,9 @@
     background-color: rgb(231, 246, 247);
     cursor: grab;
 }
+.pic-step{
+    margin-left: 30%;
+    /* align-content: center; */
+    width:350px;
+    height:350px;
+}
