--- a/quick-lab/src/LabInterface/interface.css
+++ b/quick-lab/src/LabInterface/interface.css
@@ -72,6 +72,7 @@
 }
 .heading1{
     margin-top:8%;
+    color: rgb(4, 112, 126);
 }
 .home{
     margin-left:15%;
@@ -83,7 +84,7 @@
 }
 .main{
     height: 85vh;
-    background-color: #D6F0FF;
+    background-color: #e7eff3;
 }
 
 .Box{
@@ -169,12 +170,23 @@
     border-radius: 10px;
 }
 .inst:hover{
-    background-color: rgb(231, 246, 247);
+    background-color: rgb(200, 239, 241);
     cursor: grab;
 }
 .pic-step{
-    margin-left: 30%;
+    margin-left: 25%;
+    margin-top: 3%;
     /* align-content: center; */
     width:350px;
-    height:350px;
+    /* height:350px; */
+}
+.start{
+    margin: 10% 0 0 40%;
+    background-color: white;
+    width: 30%;
+    text-align: center;
+    font-size: 20px;
+    padding: 5%;
+    color: rgb(10, 181, 204);
+
 }
