--- a/quick-lab/src/SignUp/signup.css
+++ b/quick-lab/src/SignUp/signup.css
@@ -24,6 +24,7 @@
 .firstname-1 .icons{
     color: #00A9E5;
     font-size:18px; 
+    margin-top: 1%;
     
     
 }
@@ -35,7 +36,7 @@
     border-style: none; 
     box-shadow: rgba(38, 37, 37, 0.2) 0px 2px 8px 0px;
     color: #969797;
-    margin-top: -15%;
+    margin-bottom: 2%;
     border-radius: 2px;
    }
 .firstname input:focus{
@@ -59,7 +60,8 @@
     border-style: none; 
     box-shadow: rgba(38, 37, 37, 0.2) 0px 2px 8px 0px;  
     color: #969797;
-    margin-top: 3.5%;
+    margin-top: 4%;
+    margin-bottom: 2%;
     border-radius: 2px;
    }   
 .lastname input:focus{
@@ -79,13 +81,13 @@
 .username1 input{   
     margin-left: 8%;   
     padding: 10px;   
-    width: 400px;
+    width: 400px; 
     border-radius:3px;  
     border-style: none; 
-    box-shadow: rgba(38, 37, 37, 0.2) 0px 2px 8px 0px;
+    box-shadow: rgba(38, 37, 37, 0.2) 0px 2px 8px 0px;  
     color: #969797;
     margin-top: 4%;
-    margin-bottom: 3.5%;
+    margin-bottom: 5%;
     border-radius: 2px;
    }
 .username-1 input:focus{
@@ -113,15 +115,16 @@
 
 
 .confirmpassword input{   
-     margin-left: 8.2%;   
-     padding: 10px;   
-     width: 400px;
-     border-radius:3px;  
-     border-style: none; 
-     box-shadow: rgba(38, 37, 37, 0.2) 0px 2px 8px 0px; 
-     color: #969797;
-     margin-top: 3.5%;
-     border-radius: 2px;
+    margin-left: 9%;   
+    padding: 10px;   
+    width: 400px; 
+    border-radius:3px;  
+    border-style: none; 
+    box-shadow: rgba(38, 37, 37, 0.2) 0px 2px 8px 0px;  
+    color: #969797;
+    margin-top: 2%;
+    /* margin-bottom: 2%; */
+    border-radius: 2px;
     }
 .confirmpassword-1{
     display:flex;
@@ -129,8 +132,8 @@
 }
 .confirmpassword-1 .icons{
     color: #00A9E5;
-    margin-top:8%;
-    margin-bottom:2%;
+    margin-top:3%;
+    /* margin-bottom:2%; */
 }
 
 .confirmpassword input:focus{
@@ -145,23 +148,24 @@
 
 .password-1 .icons{
     color: #00A9E5;
-    margin-top: 10%;
+    /* margin-top: 10%; */
     font-size:15px;
 }
 
-.password-1 input{   
-    margin-left: 7.8%; 
-    margin-top:2.6%; 
-    padding: 9px; 
+.password input{   
+    margin-left: 9%;   
+    padding: 10px;   
+    width: 400px; 
+    border-radius:3px;  
     border-style: none; 
-    border-radius:2px;  
     box-shadow: rgba(38, 37, 37, 0.2) 0px 2px 8px 0px;  
-    width: 438px;
-    height: 16px;
+    color: #969797;
+    margin-top: 5%;
+    /* margin-bottom: 2%; */
     border-radius: 2px;
 }
 
-.password-1 input:focus{
+.password input:focus{
     outline: none;
     box-shadow: none;
 }
@@ -200,6 +204,13 @@
      margin-top:5%;
      margin-right:-10%;
      /* font-family:sans-serif; */
+}
+.errors{
+    font-size: 9px;
+    margin-left: 40%;
+    margin-top: 0;
+    margin-bottom: 0;
+    color: red;
 }
 
 @media only screen and (min-width: 768px) {}
