added a video for demo

--- a/quick-lab/src/Login/login.css
+++ b/quick-lab/src/Login/login.css
@@ -51,6 +51,10 @@
      
     margin-left: 13%; 
     margin-top: 4%;
+    
+}
+button{
+    cursor: grab;
 }
 .loginbtn button{   
      width: 350px;  
