--- a/quick-lab/src/LandingPage/landingpage.css
+++ b/quick-lab/src/LandingPage/landingpage.css
@@ -4,20 +4,23 @@
 }
 
 .landingpg{
-    margin-left: 10%;
-    margin-top: 6%;
+    margin-top: 10%; 
+    display: flex;
 }
 
 
 .landingpg h1{
-    font-size: 70px;
+    font-size: 30px;
     color: #00A9E5;
     margin-top: 3%;
 }
 
 .landingpg p{
-    font-size: 25px;
+    font-size: 18px;
     margin-top: 2%;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .getstartedbtn button{   
@@ -30,3 +33,29 @@
     font-size: 18px;
     margin-top: 4%;
    }
+.overview{
+    width: 50%;
+    text-align: center;
+}
+.video{
+    /* background-color: blue; */
+    width: 40%;
+}
+.demo{
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+
+}
+.watch{
+    text-align: center;
+    color: rgb(7, 185, 216);
+}
+.demo iframe{
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
