--- a/quick-lab/src/LabInterface/interface.css
+++ b/quick-lab/src/LabInterface/interface.css
@@ -86,7 +86,9 @@
     height: 85vh;
     background-color: #e7eff3;
 }
-
+.drawer{
+    width: 1px;
+}
 .Box{
     width: 100%;
     height: 100vh;
@@ -205,8 +207,5 @@
     height: 120px; 
     object-fit: contain;
     margin-left: 25%;
-
-    /* flex: 0 50%; */
-    /* object-fit: fill; */
 
 }
