--- a/quick-lab/src/dashboard/dashboard.css
+++ b/quick-lab/src/dashboard/dashboard.css
@@ -7,3 +7,11 @@
 .pr{
     width: 80%;
 }
+@media screen and (max-width: 480px) {
+    .sd{
+        width: 30%;
+    }
+    .pr{
+        width: 70%;
+    }
+}
