--- a/quick-lab/src/dashboard/practicals.css
+++ b/quick-lab/src/dashboard/practicals.css
@@ -113,14 +113,57 @@
     
     margin-left:4%;
     gap: 5rem;
-
-
-
 }
 .options .topics, .level, .subject{
     margin-top: 2%;
     width:245px ;
     padding: 1px; 
     font-size: 13px;
-
 }
+@media screen and (max-width: 480px) {
+    .practical_container {
+      /* background-color: lightgreen; */
+    }
+    .options{
+        margin-left:1%;
+        gap: 0.1rem;
+        /* visibility: hidden; */
+    }
+    .all_practicals{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .one{
+        padding: 1px;
+        width: 104px;
+        margin: 0.5% 0 2% 2%;
+
+    }
+    .see_all{
+        margin-left: 70%;
+    }
+    .se_pro{
+        display: flex;
+        margin-bottom: 1%;
+    }
+    .se_pro input{
+        width: 40vw;
+      }
+      .picture{
+        border-radius: 2px;
+        height: 50px;     
+    }
+    .practical_title{
+        font-size: 9px;
+    }
+    .practical_description{
+        /* visibility: hidden; */
+        font-size: 5px;
+    }
+    h3{
+        text-align: center;
+        font-size: 15px;
+
+    }
+    
+  }
