--- a/quick-lab/src/sidebar/sidebar.css
+++ b/quick-lab/src/sidebar/sidebar.css
@@ -7,7 +7,8 @@
     border-bottom-left-radius: 10px;
 }
 .home-container-1 .logo img{
-  margin-left: 30%;
+  width:100px;
+  margin-left: 27%;
   margin-top: 18%;
 
 }
@@ -54,6 +55,85 @@
     margin-left: 45%;
     font-size:30px;
     color: rgb(247, 227, 9);
+}
+.pra{
+    background-color: #dcf0fc;
+    color: rgb(3, 50, 68);
+    padding: 1px;
+    width: 144px;
+    cursor: grab;
+    text-align: center;
+    margin: 1% 1% 0% 20%;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px rgb(153, 151, 151);
+    transition: transform 500ms ease;
+
+}
+.pra:hover{
+    transform: scale(1.1);
+
+}
+
+.image{
+    width: 100%;
+    border-radius: 10px;
+    height: 80px; 
+    object-fit: contain;
+    background-color: rgb(243, 249, 250);
+    margin-bottom: 7%;
+
+}
+.title{
+    font-size: 10px;
+    margin: 1;
+
+}
+.description{
+    font-size: 7px;
+}
+@media screen and (max-width: 480px) {
+    .home-container-1 .logo img{
+      width:50%;
+      margin-left: 27%;
+      margin-top: 18%;
+    
+    }
+    .home-container-1 h4{
+        font-size: 11px;
+    } 
+    
+    .home-container-1 p{
+        font-size: 8px;
+    } 
+/*     
+    .home-container-1 .icon{
+        color: #00A9E5;
+        margin-top:3%;
+        padding-left:0px;
+    }
+     */
+    .plus{
+        border:1px solid #00A9E5;
+        border-radius:10px;
+        width: 30px;
+        padding: 20px;
+        font-size:20px;
+        margin-left: 10%;
+    
+    }
+    .icon p{
+        color: black;
+        margin-top:-15%;
+    
+    }
+    .home-container-1 .smile{
+        margin-top: 4%;
+        margin-left: 35%;
+        font-size:30px;
+        color: rgb(247, 227, 9);
+    }
+    
+
 }
 
 
