--- a/quick-lab/src/LabInterface/interface.css
+++ b/quick-lab/src/LabInterface/interface.css
@@ -73,6 +73,7 @@
     margin-left:150%;
     color: black;
     margin-top:-2%;
+    cursor: grab;
 }
 .heading1{
     margin-top:8%;
@@ -85,6 +86,7 @@
     background-color: rgb(255, 255, 255);
     /* font-size:50px; */
     border-radius:50%;
+    cursor: grab;
 }
 .main{
     height: 85vh;
